public/app/hourglass.css
html {
    height: 100%;
}

body {
    position: relative;
    font-family: magic-school, serif;
    height: 100%;
    background: url("/img/brick.png");
    background-size:cover;
}

#main-wrapper {
    height: 100%;
    margin: 0 auto;
    padding: 0 auto;
    position: relative;
    width: auto;
}

@media (min-width: 800px) {
    #main-wrapper {
        width: 800px;
    }
}

.hourglass {
    padding: 5% 0 5% 0;
    height: 100%;
    text-align: center;
    display: inline-block;
    width: 24%;
}

.hourglass .container {
    position: relative;
    height: 100%;
    display: -webkit-box; /* OLD - iOS 6-, Safari 3.1-6 */
    display: -moz-box; /* OLD - Firefox 19- (buggy but mostly works) */
    display: -ms-flexbox; /* TWEENER - IE 10 */
    display: -webkit-flex; /* NEW - Chrome */
    display: flex; /* NEW, Spec - Opera 12.1, Firefox 20+ */
    -ms-flex-direction: column;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
}

.hourglass .house-name {
    font-size: 3em;
}

.hourglass .hourglass-body {
    flex: 1;
    margin: auto;
    position: relative;
    width: 128px;
    display: flex;
    -ms-flex-direction: column;
    -moz-flex-direction: column;
    -webkit-flex-direction: column;
    flex-direction: column;
}

.hourglass .hourglass-body .top {
    height: 140px;
    width: 100%;
    position: relative;
}

.hourglass .hourglass-body .top .sand {
    height: 100%;
    width: 100%;
    background: top repeat;
    -webkit-background-size: 100%;
    background-size: 100%;
    -webkit-mask-image: url(/img/hourglass_mask.svg);
    mask-image: url(/img/hourglass_mask.svg);
    z-index: 5;
}

.hourglass .hourglass-body .top .hourglass-top {
    position: absolute;
    top: 0;
    background: url('/img/hourglass_top.png') top no-repeat;
    height: 100%;
    width: 100%;
    z-index: 10;
}

.hourglass .hourglass-body .middle {
    flex: 1;
    position: relative;
    width: 100%;
    background: url('/img/glass.png') bottom center repeat-y;
    -webkit-background-size: 100%;
    background-size: 100%; /* TODO TRY COVER */
}

@keyframes move-sand-u {
    0% {background-position: 0 0;}
    50% {background-position: left 0 top -64px;}
    100% {background-position: left 0 top -128px;}
}

@keyframes move-sand-d {
    0% {background-position: 0 0;}
    50% {background-position: left 0 top 64px;}
    100% {background-position: left 0 top 128px;}
}

@keyframes move-sand-ld {
    0% {background-position: 0 0;}
    100% {background-position: left 128px top 128px;}
}

@keyframes move-sand-ru {
    0% {background-position: 0 0;}
    100% {background-position: left -128px top -128px;}
}

.hourglass .hourglass-body .middle .sand {
    position: absolute;
    bottom: -50px;
}

.hourglass .hourglass-body .sand {
    animation-name: move-sand-ld;
    animation-timing-function: linear;
    animation-iteration-count: infinite;
    animation-duration: 10s;
    width: 100%;
    transition: height 0.5s linear;
    background-position: bottom;
    -webkit-background-size: 100%;
    background-size: 100%;
    box-shadow: 0 -3px 10px black;
}

.hourglass[data-place="1"] .hourglass-body .sand {
    animation-name: move-sand-u;
}

.hourglass[data-place="2"] .hourglass-body .sand {
    animation-name: move-sand-ru;
}

.hourglass[data-place="4"] .hourglass-body .sand {
    animation-name: move-sand-d;
}

.hourglass[data-house="slytherin"] .hourglass-body .sand {
    background-image: url('/img/sand_sly.png');
}

.hourglass[data-house="ravenclaw"] .hourglass-body .sand {
    background-image: url('/img/sand_rav.png');
}

.hourglass[data-house="gryffindor"] .hourglass-body .sand {
    background-image: url('/img/sand_gry.png');
}

.hourglass[data-house="hufflepuff"] .hourglass-body .sand {
    background-image: url('/img/sand_huf.png');
}

.hourglass .hourglass-body .glass {
    background: url('/img/glass.png') repeat-y;
    height: 100%;
    width: 100%;
}

.hourglass .hourglass-body .bottom {
    width: 100%;
    height: 100px;
    position: absolute;
    bottom: -100px;
    z-index: 5;
}

.hourglass .house-crest {
}

.hourglass .house-crest img {
    position: relative;
    width: 100%;
    z-index: 10;
}

.hourglass .score {
    position: relative;
    top: 0.15em;
    color: white;
    font-size: 3em;
}

